log
Fri May  1 03:14:18 AM UTC 2026: 
 tests:  1|8
total_score: 0/60
0eef48c
Fri May  1 03:47:51 AM UTC 2026: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/60
dd1b36d
Fri May  1 04:04:19 AM UTC 2026: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:63:40: error: ‘TreeNode’ has no member named ‘key’
   63 |         if (is_equal(tree, key, NodoAux->key) == 0) return NodoAux-pair; // Si las llaves son iguales lo encontramos
      |                                        ^~
treemap.c:63:68: error: ‘pair’ undeclared (first use in this function); did you mean ‘Pair’?
   63 |         if (is_equal(tree, key, NodoAux->key) == 0) return NodoAux-pair; // Si las llaves son iguales lo encontramos
      |                                                                    ^~~~
      |                                                                    Pair
treemap.c:63:68: note: each undeclared identifier is reported only once for each function it appears in
3ee41d5
Fri May  1 04:04:37 AM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:63:40: error: ‘TreeNode’ has no member named ‘key’
   63 |         if (is_equal(tree, key, NodoAux->key) == 0) return NodoAux->pair; // Si las llaves son iguales lo encontramos
      |                                        ^~
ad2ed4b
Fri May  1 04:05:20 AM UTC 2026: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/60
5790645
Fri May  1 04:15:53 AM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 5/60
a5705af
Fri May  1 04:16:48 AM UTC 2026: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:64:37: error: ‘pair’ undeclared (first use in this function); did you mean ‘Pair’?
   64 |             tree->current = NodoAux-pair;
      |                                     ^~~~
      |                                     Pair
treemap.c:64:37: note: each undeclared identifier is reported only once for each function it appears in
e9070c7
Fri May  1 04:16:56 AM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:64:27: error: assignment to ‘TreeNode *’ from incompatible pointer type ‘Pair *’ [-Wincompatible-pointer-types]
   64 |             tree->current = NodoAux->pair;
      |                           ^
734bdf9
Fri May  1 04:17:45 AM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:64:27: error: assignment to ‘TreeNode *’ from incompatible pointer type ‘Pair **’ [-Wincompatible-pointer-types]
   64 |             tree->current = &NodoAux->pair;
      |                           ^
3dd0c26
Fri May  1 04:17:51 AM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:64:29: error: incompatible types when assigning to type ‘TreeNode *’ from type ‘Pair’
   64 |             tree->current = *NodoAux->pair;
      |                             ^
32142f1
Fri May  1 04:18:11 AM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/60
4cb3345
